# udp-router

./: Cargo.toml  README.md
terraform/: config.tf  main.tf  outputs.tf  variables.tf
udp-router/: Cargo.toml  build.rs
udp-router-client/: Cargo.toml
udp-router-client/src/: main.rs
udp-router-common/: Cargo.toml
udp-router-ebpf/: Cargo.toml
udp-router-ebpf/src/: main.rs
udp-router-protobuf/: Cargo.toml  build.rs
udp-router-protobuf/proto/: management.proto
udp-router-protobuf/src/: management.rs
udp-router-protobuf/src/codegen/: management.rs
udp-router-server/: Cargo.toml
udp-router-server/src/: main.rs
udp-router-tool/: Cargo.toml
udp-router-tool/src/: main.rs
udp-router/src/: bpf_actor.rs  main.rs  server.rs
xtask/src/: run.rs
