[package]
name = "udp-router-client"
version = "0.1.0"
edition = "2021"

[dependencies]
udp-router-common = { path = "../udp-router-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt", "rt-multi-thread", "net", "signal"] }
clap = { workspace = true, features = ["derive"] }
tokio-stream = { workspace = true }

[build-dependencies]
cargo_metadata.workspace = true
xtask = { path = "../xtask" }

[[bin]]
name = "udp-router-client"
path = "src/main.rs"
