[package]
name = "udp-router-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
udp-router-common = { path = "../udp-router-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }
xtask = { path = "../xtask" }

[[bin]]
name = "udp-router"
path = "src/main.rs"
