[package]
name = "udp-filter-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
udp-router-protobuf = { path = "../udp-router-protobuf" }
anyhow = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt", "rt-multi-thread", "net", "signal"] }
clap = { workspace = true, features = ["derive"] }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }

[[bin]]
name = "udp-filter-tool"
path = "src/main.rs"

