[package]
name = "udp-router"
version = "0.1.0"
edition = "2021"

[dependencies]
udp-router-common = { path = "../udp-router-common", features = ["user"] }
udp-router-protobuf = { path = "../udp-router-protobuf" }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt", "rt-multi-thread", "net", "signal"] }
clap = { workspace = true, features = ["derive"] }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
socket2 = { workspace = true }
tokio-stream = { workspace = true }

[build-dependencies]
udp-router-ebpf = { path = "../udp-router-ebpf" }
cargo_metadata.workspace = true
xtask = { path = "../xtask" }

[[bin]]
name = "udp-router"
path = "src/main.rs"
